--- a/BookClub/Views/UserAdmin/UserDetails.cshtml
+++ b/BookClub/Views/UserAdmin/UserDetails.cshtml
@@ -53,7 +53,7 @@
 </div>
 
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Edit", "EditUser", new { id = Model.Id }) |
     @Html.ActionLink("Back to list", "GetAllApplicationUsers")
 </p>
 
