--- a/BookClub/Views/Admin/AddDiscussion.cshtml
+++ b/BookClub/Views/Admin/AddDiscussion.cshtml
@@ -1,10 +1,8 @@
 ﻿@model BookClub.Data.Models.Discussion
 
-@{
-    ViewBag.Title = "AddDiscussion";
-}
 
-<h2>AddDiscussion</h2>
+
+@*<h2><i>Add to:</i> <b class="discussionName">@Model.DicussionName</b> Discussion</h2>*@
 
 @using (Html.BeginForm()) 
 {
@@ -35,14 +33,6 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Created, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Created, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
             </div>
         </div>
 
