--- a/BookClub/Views/Discussion/GetAllDiscussions.cshtml
+++ b/BookClub/Views/Discussion/GetAllDiscussions.cshtml
@@ -1,19 +1,18 @@
 ﻿@model IEnumerable<BookClub.Data.Models.Discussion>
 
-
 <div class="container">
     <div class="allDiscussionsHeader">
         <div class="discussionTitle">Discussion Boards</div>
     </div>
 
-    @*Only allows Admin Users to add a new Book*@
+    @*Only allows Admin Users to add a new Discussion*@
     <div class="discussionContent">
         @if (User.IsInRole("Admin"))
         {
             <button class="btn btn-success" id="addButton" onclick="location.href='@Url.Action("AddDiscussion", "Admin")'">Add Discussion</button>
-           
         }
-
+    
+        @*Displays Table for each item in the Discussion database*@
         <table class="table table-hover table-bordered" id="discussionTable">
             <tbody>
                 @foreach (var item in Model)
@@ -28,6 +27,8 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.Description)
                         </td>
+
+                        @*Small book icon so the User can go to the book details view if needed*@ 
                         <td>
                             <a><i class="glyphicon glyphicon-book" onclick="location.href='@Url.Action("GetBookId", "Book", new { id = item.Id })'"></i></a>
                         </td>
