--- a/BookClub/Views/Post/AddPost.cshtml
+++ b/BookClub/Views/Post/AddPost.cshtml
@@ -1,9 +1,9 @@
 ﻿@model BookClub.ViewModels.Post.AddPostViewModel
 
-
-
-
-<h2><i>Add to:</i> <b class="discussionName">@Model.DicussionName</b> Discussion</h2>
+<div>
+<p><i>Add to:</i> <b class="discussionName">@Model.DicussionName</b> Discussion</p>
+</div>
+    
 
 @using (Html.BeginForm()) 
 {
@@ -26,8 +26,9 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Content, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
+                @*<textarea rows="6" cols="100" name="bookContent" id="txtBookContent"></textarea>*@
+                @Html.TextAreaFor(model => model.Content, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
             </div>
         </div>
 
