--- a/BookClub/Views/Post/GetPost.cshtml
+++ b/BookClub/Views/Post/GetPost.cshtml
@@ -25,7 +25,7 @@
                     <p>
                         <span class="promptLogin">
                             You must be a
-                            @Html.ActionLink("Registered Member", "Register", "Account") or
+                            @Html.ActionLink("Registered Member", "Register", "Account", new { returnUrl = Request.Url.PathAndQuery }, null) or
                             @Html.ActionLink("Logged in", "Login", "Account", new { returnUrl = Request.Url.PathAndQuery }, null)
                             to reply to this post
                         </span>
@@ -34,6 +34,7 @@
         </div>
     </div>
 
+    @*Displays the Users post content and date posted*@
     <div class="row" id="postContent">
         <div class="col-md-3 postAuthorContainer">
             @Html.ActionLink(Model.UserName, "Detail",
@@ -52,7 +53,6 @@
         <div class="deletePost">
 
             @*Only allows logged in Users to delete/edit their own posts by showing icons for Delete & Edit*@
-
             @if (Model.UserId == User.Identity.GetUserId())
             {
                 <a><i class="glyphicon glyphicon-edit" onclick="location.href='@Url.Action("UpdatePost", "Post", new { id = Model.PostId })'"></i></a>
