--- a/BookClub/Views/Review/_ReviewContentPartial.cshtml
+++ b/BookClub/Views/Review/_ReviewContentPartial.cshtml
@@ -1,7 +1,6 @@
-﻿@using Microsoft.AspNet.Identity
+﻿@using Microsoft.AspNet.Identity;
 
 @model BookClub.ViewModels.Review.ReviewViewModel
-
 
 <div class="reviewContent">
     <table style="width: 100%; border: 1px solid black">
