--- a/BookClub/Views/UserAdmin/UserDetails.cshtml
+++ b/BookClub/Views/UserAdmin/UserDetails.cshtml
@@ -54,6 +54,6 @@
 
 <p>
     @Html.ActionLink("Edit", "EditUser", new { id = Model.Id }) |
-    @Html.ActionLink("Back to list", "GetAllApplicationUsers")
+    @Html.ActionLink("Back to list", "GetAllUsers")
 </p>
 
