--- a/BookClub/Views/Home/Index.cshtml
+++ b/BookClub/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNet.Identity
-<div class="container">
+<div class="container" id="homePageContainer">
     <div class="row homeHeader">
         <h5 class="homeTitle">Welcome to MyBookPal - The book club made for you</h5>
     </div>
