--- a/BookClub/Views/Challenge/GetChallenges.cshtml
+++ b/BookClub/Views/Challenge/GetChallenges.cshtml
@@ -41,7 +41,7 @@
                     You must be a
                     @Html.ActionLink("Registered Member", "Register", "Account", new { returnUrl = Request.Url.PathAndQuery }, null) or
                     @Html.ActionLink("Logged in", "Login", "Account", new { returnUrl = Request.Url.PathAndQuery }, null)
-                    to reply to add/view your challenges
+                    to add/view your challenges
                 </div>
         }
        
