--- a/BookClub/Views/Reply/AddReply.cshtml
+++ b/BookClub/Views/Reply/AddReply.cshtml
@@ -17,7 +17,7 @@
         <div class="form-horizontal">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="col-md-5" id="replyTextArea">
-                @Html.TextAreaFor(model => model.ReplyContent, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.ReplyContent, new { htmlAttributes = new { @class = "form-control", @cols = "50", @rows = "20", @style = "width:100%;" } })
                 @Html.ValidationMessageFor(model => model.ReplyContent, "", new { @class = "text-danger" })
 
                 <div class="form-group" id="addReplyButton">
