--- a/BookClub/Views/UserAdmin/GetAllUsers.cshtml
+++ b/BookClub/Views/UserAdmin/GetAllUsers.cshtml
@@ -24,7 +24,7 @@
             {
                 <tr>
                     <td>
-                        @user.UserName |
+                        @user.UserName 
                     </td>
                     <td>
                         @Html.ActionLink("Details", "UserDetails", new { id = user.Id }) |
