--- a/BookClub/Views/UserAdmin/Details.cshtml
+++ b/BookClub/Views/UserAdmin/Details.cshtml
@@ -47,6 +47,6 @@
 <p>
     
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "GetAllRoles")
      
 </p>
